Set proxysql image to 2.6.2-debian

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,7 +58,7 @@ services:
             timeout: 5s
     proxysql:
       container_name: proxy-sql-demo
-      image: 'proxysql/proxysql:latest' # docker pull proxysql/proxysql:2.6.2-debian
+      image: 'proxysql/proxysql:2.6.2-debian'
       ports:
           - '6033:6033'
           - '6032:6032'
